Update 'ua7ujyg22-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe:b414b8c0132ec41309757f3151cb1f113f26336d@sha256:18b6e38c86a40c83e34ab45baacd58eca968ef5a4f481c823e8061b596c68a08

--- a/components/ua7ujyg22-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/ua7ujyg22-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ua7ujyg22-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:b414b8c0132ec41309757f3151cb1f113f26336d@sha256:18b6e38c86a40c83e34ab45baacd58eca968ef5a4f481c823e8061b596c68a08
+          name: container-image
